[Java] Changed NativeHandleWrapper creation from deferred to using a single callback